# personal-webpage

./: .gitignore  HANDOFF_TO_DASHBOARD.md  README.md  app.py  borrower_template.json  briefing.py  castle-of-the-winds.html  cli.py  config.py  game.html  index.html  kids-book.html  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: borrower-metrics.yml  morning-briefing.yml  release-alert.yml
borrower_metrics/: __init__.py  charts.py  excel_report.py  generate.py  models.py  pdf_report.py  pyproject.toml  sample_data.py
borrower_metrics/charts/: __init__.py  charter.py  early_care.py  fqhc.py  nonprofit.py  shared.py
borrower_metrics/models/: __init__.py  base.py  charter.py  early_care.py  fqhc.py  nonprofit.py
borrower_metrics/reports/: shared.py
borrower_metrics/reports/excel/: __init__.py  charter.py  early_care.py  fqhc.py  nonprofit.py  shared.py
borrower_metrics/reports/pdf/: __init__.py  charter.py  early_care.py  fqhc.py  nonprofit.py
borrower_metrics/sample_data/: __init__.py  charter.py  early_care.py  fqhc.py  nonprofit.py
jifla-loan-review/: .env.example  .gitignore  README.md  package-lock.json  package.json
jifla-loan-review/client/: index.html  package-lock.json  package.json
jifla-loan-review/client/src/: App.jsx
jifla-loan-review/server/: db.js  index.js  seed.js
models/: schemas.py
routers/: download.py  search.py  tables.py
services/: db.py  ingestor.py
services/sources/: base.py  datagov.py  html_scraper.py  kaggle_source.py  url_download.py
static/: app.js  style.css
templates/: index.html
(+29 files in other folders)
