[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "borrower-metrics"
version = "0.1.0"
description = "PDF and Excel report generation for borrower underwriting"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.2.0",
    "matplotlib>=3.9.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
